--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
+# LSP
 .cache
-.DS_Store
-build
+
+# vscode
+.vscode
+
+# personal scripts
 format.sh
+
+# ctags
+tags
+
+# macos
+.DS_Store
+
+# build
+build/
+
+# python
+env/
