--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,32 @@
-cmake_minimum_required(VERSION 3.17.3)
+cmake_minimum_required(VERSION 3.23.1)
 
 project(ceceo)
 
-# C options
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_EXTENSIONS OFF)
-set(CXX_STANDARD_REQUIRED ON)
-
-# Misc
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Add library
-add_executable(${PROJECT_NAME} ceceo/main.cpp)
+# declare the library 
+add_executable(${PROJECT_NAME} ${PROJECT_NAME}/main.cpp)
 
-# add library sources
+# features
+set_target_properties(${PROJECT_NAME}
+    PROPERTIES 
+        CXX_STANDARD          20
+        CXX_STANDARD_REQUIRED ON
+        CXX_EXTENSIONS        OFF)
+
+# add sources
 add_subdirectory(${PROJECT_NAME})
 
-# include directories
-target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR})
+# includes
+target_include_directories(${PROJECT_NAME} 
+  PRIVATE ${CMAKE_SOURCE_DIR})
 
-set(OTTER_CXX_CLANG_BASE_COMPILE_FLAGS 
+# compile options
+target_compile_options(${PROJECT_NAME} PUBLIC
+	"$<$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>:"
+    -std=c++20
 		-Wall
 		-Wshadow
 		-Wextra
@@ -28,52 +34,25 @@ set(OTTER_CXX_CLANG_BASE_COMPILE_FLAGS
 		-Wpedantic
 		-pedantic-errors
 		-Walloca 
-		-Wcast-qual 
-		-Wconversion 
-		-Wformat=2 
-		-Wformat-security 
-		-Wnull-dereference 
-		-Wstack-protector 
-		-Wstrict-overflow=3 
 		-Wvla 
-		-Warray-bounds 
-		-Warray-bounds-pointer-arithmetic 
-		-Wassign-enum 
-		-Wbad-function-cast 
-		-Wconditional-uninitialized 
-		-Wconversion 
-		-Wfloat-equal 
-		-Wformat-type-confusion 
-		-Widiomatic-parentheses 
-		-Wimplicit-fallthrough 
-		-Wloop-analysis 
-		-Wpointer-arith 
-		-Wshift-sign-overflow 
-		-Wshorten-64-to-32 
-		-Wswitch-enum 
-		-Wtautological-constant-in-range-compare 
-		-Wunreachable-code-aggressive)
-
-
-set(OTTER_CXX_CLANG_DEBUG_COMPILE_FLAGS
+    -fdiagnostics-color=always
+  ">"
+	"$<$<AND:$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>,$<CONFIG:Debug>>:"
 		-O0
 		-g
 		-fsanitize=address
 		-fsanitize=undefined
-		-fsanitize=bounds)
+		-fsanitize=bounds
+  ">"
+	"$<$<AND:$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>,$<CONFIG:Release>>:"
+		-Ofast
+  ">")
 
-set(OTTER_CXX_CLANG_RELEASE_COMPILE_FLAGS
-		-O3)
-
-set(OTTER_CXX_CLANG_DEBUG_LINK_FLAGS
+# link options
+target_link_options(${PROJECT_NAME} PUBLIC
+	"$<$<AND:$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>,$<CONFIG:Debug>>:"
 		-fsanitize=address
 		-fsanitize=undefined
-		-fsanitize=bounds)
-		
-target_compile_options(${PROJECT_NAME} PRIVATE
-	"$<$<CXX_COMPILER_ID:Clang,AppleClang>:${OTTER_CXX_CLANG_BASE_COMPILE_FLAGS}>"
-	"$<$<AND:$<CXX_COMPILER_ID:Clang,AppleClang>,$<CONFIG:Debug>>:${OTTER_CXX_CLANG_DEBUG_COMPILE_FLAGS}>"
-	"$<$<AND:$<CXX_COMPILER_ID:Clang,AppleClang>,$<CONFIG:Release>>:${OTTER_CXX_CLANG_RELEASE_COMPILE_FLAGS}>")
+		-fsanitize=bounds
+  ">")
 
-target_link_options(${PROJECT_NAME} PUBLIC
-	"$<$<AND:$<CXX_COMPILER_ID:Clang,AppleClang>,$<CONFIG:Debug>>:${OTTER_CXX_CLANG_DEBUG_LINK_FLAGS}>")
