--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # declare the library 
-add_executable(${PROJECT_NAME} ${PROJECT_NAME}/main.cpp)
+add_executable(${PROJECT_NAME})
 
 # features
 set_target_properties(${PROJECT_NAME}
